# data

./: .agent.md  .env.template  .gitignore  AUTHENTICATION_SYSTEM_GUIDE.md  README.md  SECURE_ENV_GUIDE.md  SECURE_ENV_README.md  auth_system_design.md  environment.yml  pyproject.toml  requirements.txt  setup_secure_env.py
backend/: create_tables.sql  requirements.txt
backend/app/: auth.py  config.py  database.py  env_manager_cli.py  main.py  main_secure.py  middleware.py  routes.py  schemas.py  secure_config.py  secure_env.py  security.py
frontend/: next.config.js  package.json  tailwind.config.js
project_plan/: README.md  milestones.md  modules_breakdown.md  progress_tracking.md  roadmap.md
project_plan/sprints/: sprint_01.md  sprint_02.md
project_plan/task_templates/: bug_template.md  feature_template.md  review_template.md
static/: line.py
